# WorkBalance

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  TODO_REFACTORING.md  app.rc  install_code_quality_tools.ps1  main.cpp  run_clang_tidy.ps1  vcpkg.json
.github/workflows/: release.yml
assets/: app.rc  embedded_resources.h
cmake/: embed_resources.cmake
docs/: BUILD.md
include/app/: Application.h  ApplicationEvents.h  ImGuiLayer.h
include/app/ui/: MainWindowView.h  OverlayView.h  WellnessViews.h
include/app/ui/callbacks/: SettingsCallbacks.h  TaskCallbacks.h  TimerCallbacks.h  WindowCallbacks.h
include/app/ui/components/: SettingsPopup.h  TaskListPanel.h  TimerPanel.h
include/controllers/: TaskController.h  TimerController.h  WellnessController.h
include/core/: Configuration.h  Event.h  IPersistenceService.h  ITimeSource.h  Observable.h  Persistence.h  Task.h  Timer.h  WellnessTimer.h  WellnessTypes.h
include/system/: AudioManager.h  IAudioService.h  INotificationService.h  MainWindow.h  NotificationManager.h  OverlayWindow.h  SystemTray.h  WindowBase.h  WindowsStartup.h
include/ui/: AppState.h  NavigationTabs.h  PomodoroUI.h
include/ui/state/: DragState.h  RuntimeCounters.h  SettingsEditState.h  TaskEditState.h  UIState.h
src/app/: Application.cpp  ImGuiLayer.cpp
src/app/ui/: MainWindowView.cpp  OverlayView.cpp  WellnessViews.cpp
src/app/ui/components/: SettingsPopup.cpp  TaskListPanel.cpp  TimerPanel.cpp
src/controllers/: TaskController.cpp  TimerController.cpp  WellnessController.cpp
src/core/: Persistence.cpp  Task.cpp  Timer.cpp  WellnessTimer.cpp
src/system/: AudioManager.cpp  MainWindow.cpp  MiniaudioImplementation.cpp  NotificationManager.cpp  OverlayWindow.cpp  StbImage.cpp  SystemTray.cpp  WindowBase.cpp  WindowsStartup.cpp
src/ui/: NavigationTabs.cpp
tests/: EventTest.cpp  ObservableTest.cpp  PersistenceTest.cpp  TaskControllerTest.cpp  TaskTest.cpp  TimerTest.cpp
tools/: build_release.ps1  run_clang_tidy.ps1
